完成图文信息访问缺陷的修复，另外增加了好时光的插件和自定义菜单内容的修改。

--- a/myinfosit/Dzx1Rewrite/httpd.ini
+++ b/myinfosit/Dzx1Rewrite/httpd.ini
@@ -8,6 +8,7 @@
    RewriteRule    ^/js/(.*)  /app/webroot/js/$1 [L]
    #RewriteRule    ^/img/(.*)  /app/webroot/img/$1 [L]
    RewriteRule    ^/(.+)/img/(.*)  /app/plugins/$1/img/$2 [L]
+   RewriteRule    ^/(.+)/material/mix/(.*)  /app/plugins/$1/material/mix/$2 [L]
    RewriteRule    ^/theme/(.*)  /app/webroot/theme/$1 [L]
    RewriteRule    ^/html/(.*)  /app/webroot/html/$1 [L]
    RewriteRule    ^/(.*)\.html  /app/webroot/html/$1\.html [L]
