--- a/myinfosit/.htaccess
+++ b/myinfosit/.htaccess
@@ -3,6 +3,7 @@
    RewriteRule    test.php  /myinfosit/test.php    [L]
    RewriteRule    ^$  /myinfosit/app/webroot/html/home.html    [L]
    RewriteRule    ^(.+)/(css|img|js)/(.*)$  /myinfosit/app/plugins/$1/$2/$3 [L]
+   RewriteRule    ^(.+)/material/mix/(.*)$  /myinfosit/app/plugins/$1/material/mix/$2 [L]
    RewriteRule    (.*)  /myinfosit/app/webroot/$1 [L]
    RewriteRule    (theme.*)  /myinfosit/app/webroot/$1 [L]
 </IfModule>
