--- a/myinfosit/Dzx1Rewrite/httpd.ini
+++ b/myinfosit/Dzx1Rewrite/httpd.ini
@@ -8,7 +8,7 @@
    RewriteRule    ^/js/(.*)  /app/webroot/js/$1 [L]
    #RewriteRule    ^/img/(.*)  /app/webroot/img/$1 [L]
    RewriteRule    ^/(.+)/img/(.*)  /app/plugins/$1/img/$2 [L]
-   RewriteRule    ^/(.+)/material/mix/(.*)  /app/plugins/$1/material/mix/$2 [L]
+   RewriteRule    ^/(.+)/material/(mix|hook)/(.*)  /app/plugins/$1/material/$2/$3 [L]
    RewriteRule    ^/(.+)/(css|img|js|html)/(.*)  /app/plugins/$1/$2/$3 [L]
    RewriteRule    ^/theme/(.*)  /app/webroot/theme/$1 [L]
    RewriteRule    ^/html/(.*)  /app/webroot/html/$1 [L]
